--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/connect": "^3.4.38",
+    "events": "^3.3.0",
+    "firebase": "^10.6.0",
+    "firebase-admin": "^11.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
